criando modal de geração de flash cards